[package]
name = "shader-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu" }

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
